# AVS

./: AVScondor.cc  AVSmain.cc  CMakeLists.txt
cmake/: version.cmake
include/: AVSActionInitialization.hh  AVSAnalysisManager.hh  AVSDetectorConstruction.hh  AVSEventAction.hh  AVSPrimaryGeneratorAction.hh  AVSRunAction.hh  AVSSteppingAction.hh  AVSStructure.hh  AVSTrackingAction.hh
macro/preset/: preset_alpha_14mm_100k.mac  preset_alpha_14mm_1M.mac  preset_alpha_14mm_200k.mac  preset_alpha_24mm_100k.mac  preset_alpha_24mm_1M.mac  preset_alpha_24mm_200k.mac  preset_gamma_14mm_1M.mac  preset_gamma_24mm_1M.mac  preset_gamma_alpha_14mm_1M.mac  preset_gamma_alpha_24mm_1M.mac
macro/preset_2020/: preset_alpha_14mm_200k.mac  preset_alpha_14mm_25k.mac  preset_alpha_24mm_200k.mac  preset_alpha_24mm_25k.mac  preset_gamma_14mm_1M.mac  preset_gamma_24mm_1M.mac  preset_gamma_alpha_14mm_1M.mac  preset_gamma_alpha_24mm_1M.mac
macro/test/: gps.mac  gps_1.mac  gps_1000.mac  gps_10000_14.mac  gps_10000_24.mac  gps_1000_24.mac  monogun_1.mac  monogun_1000.mac
src/: AVSActionInitialization.cc  AVSAnalysisManager.cc  AVSDetectorConstruction.cc  AVSEventAction.cc  AVSPrimaryGeneratorAction.cc  AVSRunAction.cc  AVSSteppingAction.cc  AVSStructure.cc  AVSTrackingAction.cc
